# vdbcrack

./: README.md
faiss-crack/: .gitignore  DEV_NOTES_VASILI.md  NOTES.md  chatgpt_2d_vector_view.txt  crackivf.yml  install_faiss_mkl_release.sh  test_crack_ivf.ipynb
faiss-crack/benchs/: CMakeLists.txt  bench_crack_ivf.cpp
faiss-crack/faiss/: Clustering.cpp  IndexFlat.cpp  IndexIVF.cpp  IndexIVF.h  IndexIVFFlat.cpp
faiss-crack/faiss/invlists/: DirectMap.cpp  InvertedLists.cpp  InvertedLists.h
faiss-crack/faiss/python/: class_wrappers.py
main_code/: CrackIVF.py  plot_all_for_paper.py  run_baselines.py  run_baselines.sh  run_ours.py  run_ours.sh  vasili_helpers.py
main_code/other/: annbench-sift-results.csv  compute_mem_bw_for_my_cpu.py  faiss-adaptive-ivf.ipynb  faiss_crack_refine_reorg.ipynb  intro_skew_figure.ipynb  learn_cost_estimate.ipynb  local_reassignments_benchmark.ipynb  nprobe_analysis.ipynb  plot_index_utility.ipynb  plot_qps.py  poster_retreat copy.ipynb  test.ipynb  test_crack_qmeans.ipynb  test_custom_faiss_crack_ivf.ipynb  test_faiss_swig_cracking_functions.ipynb  test_local_km.ipynb  test_p_visited_performance.ipynb  workload_generator.py  workload_generator_tests.ipynb
main_code/other/generate_datasets/: README.md  convert_sift_dataset_to_bin.ipynb  generate_ann_benchmarks_datasets.py
main_code/results/SIFT10M_default_BASELINES/: baseline_results_250227_rerun_baselines.csv  baseline_results_250227_rerun_baselines_nlist_100.csv
main_code/results/SIFT10M_default_OURS/: summary_results.csv  (+1 more)
others/AVtree/: CMakeLists.txt  knn  main_knn.cpp
(+34 files in other folders)
